[tool.poetry]
name = "fedcloud-vm-monitoring"
version = "0.2.1"
description = "Monitoring fedcloud VMs and sites"
authors = ["Giuseppe La Rocca <giuseppe.larocca@egi.eu>",
           "Enol Fernandez <enol.fernandez@egi.eu>"]
readme = "README.md"

[tool.poetry.scripts]
fedcloud-vo-monitor = "fedcloud_vm_monitoring.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
fedcloudclient = "^1.4.3"
ldap3 = "^2.9.1"
python-dateutil = "^2.9.0.post0"
paramiko = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
